# recruitment-test-gen-ai

./: .example.env  .gitignore  Makefile  README.md  ingestion_pipeline.py  parse_documents.py  pyproject.toml
app/: main.py
app/api/endpoints/: query.py
app/core/: config.py
app/models/: query.py
