[tool.poetry]
name = "recruitment-test-gen-ai"
version = "0.1.0"
description = ""
authors = ["Fleron <emil.fleron@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
llama-index = "^0.12.4"
qdrant-client = "^1.12.1"
llama-index-embeddings-azure-openai = "^0.3.0"
llama-index-llms-azure-openai = "^0.3.0"
llama-index-vector-stores-qdrant = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
