[project]
name = "recruitment-test-gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "llama-index>=0.12.5",
    "llama-index-embeddings-azure-openai>=0.3.0",
    "llama-index-llms-azure-openai>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.12.1",
    "uvicorn>=0.34.0",
]
